extra info nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -2,144 +2,187 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nosotros - Mudanzas Sostenibles | greenhauL</title>
-
-  <!-- Estilos e íconos -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nosotros - greenhauL</title>
   <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/pages.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 </head>
 <body>
-  <!-- HEADER -->
-  <header>
-    <nav class="navbar">
-      <div class="container navbar-content">
-        <a href="index.html" class="logo">
-          <img src="assets/img/Greenhaul-fl.svg" alt="Logo de GreenHaul" />
-        </a>
-        <button class="navbar-toggler" id="navbarToggler" aria-label="Toggle navigation">
-          <span class="toggler-icon"></span>
-          <span class="toggler-icon"></span>
-          <span class="toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse" id="navbarCollapse">
-          <ul class="nav-links-list">
-            <li><a href="index.html" class="nav-link">Inicio</a></li>
-            <li><a href="productos.html" class="nav-link">Productos</a></li>
-            <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-            <li><a href="nosotros.html" class="nav-link active">Nosotros</a></li>
-            <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-            <li><a href="faq.html" class="nav-link">Preguntas</a></li>
-          </ul>
-          <div class="navbar-right-items">
-            <div class="navbar-user-actions" id="navbarUserActions">
-              <a href="login.html" class="btn btn-outline" id="loginBtn">Iniciar Sesión</a>
-              <a href="cuenta.html" class="nav-link" id="accountLink" style="display: none;">Hola, <span id="userName"></span></a>
-              <button class="btn-tertiary" id="logoutBtn" style="display: none;" title="Cerrar Sesión"><i class="fas fa-sign-out-alt"></i></button>
-            </div>
-            <div class="nav-icons">
-              <a href="#" class="nav-icon cart-icon" id="cartIcon">
-                <i class="fas fa-shopping-cart"></i>
-                <span class="cart-count" id="cartCount">0</span>
-              </a>
-            </div>
+  <main class="page-content">
+    <!-- Hero Tecnológico -->
+    <section class="tech-hero">
+      <div class="floating-elements">
+        <div class="floating-element"><i class="fas fa-cube" style="font-size: 3rem;"></i></div>
+        <div class="floating-element"><i class="fas fa-microchip" style="font-size: 2.5rem;"></i></div>
+        <div class="floating-element"><i class="fas fa-rocket" style="font-size: 3.5rem;"></i></div>
+      </div>
+      <div class="hero-content">
+        <h1 class="hero-title">Renta de Cajas <span style="color: var(--accent-green);">Reutilizables</span></h1>
+        <p class="hero-subtitle">Mudanzas Más Fáciles + Planeta Más Limpio</p>
+        <p class="hero-description">
+          Somos una empresa mexicana dedicada al alquiler de cajas reutilizables para mudanzas.
+          Nuestra misión es hacer tu mudanza más fácil mientras cuidamos el medio ambiente.
+        </p>
+        <div style="opacity: 0; animation: slideUp 1s ease-out 2s forwards;">
+          <a href="#como-funciona" class="btn btn-primary pulse-animation">Conoce Cómo Funciona</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Estadísticas -->
+    <section class="stats-section">
+      <div class="container">
+        <div class="section-title">
+          <h2>Nuestro Impacto Real</h2>
+          <p>Números que demuestran el valor de nuestro servicio</p>
+        </div>
+        <div class="stats-grid">
+          <div class="stat-card">
+            <div class="stat-number" style="--target: 2500;">0</div>
+            <h4>Mudanzas Completadas</h4>
+            <p>Familias satisfechas</p>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number" style="--target: 45000;">0</div>
+            <h4>Cajas de Cartón Evitadas</h4>
+            <p>Menos desperdicio</p>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number" style="--target: 12;">0</div>
+            <h4>Toneladas de Cartón Ahorradas</h4>
+            <p>Impacto ambiental positivo</p>
+          </div>
+          <div class="stat-card">
+            <div class="stat-number" style="--target: 96;">0%</div>
+            <h4>Satisfacción del Cliente</h4>
+            <p>Calificación promedio</p>
           </div>
         </div>
       </div>
-    </nav>
-  </header>
+    </section>
 
-  <!-- CONTENIDO -->
-  <main class="page-content">
-    <section class="section">
+    <!-- Timeline -->
+    <section class="tech-timeline">
       <div class="container">
         <div class="section-title">
-          <h2>Sobre <span class="highlight-sostenible">GreenHaul</span></h2>
-          <p>Conoce quiénes somos, por qué existimos y qué nos motiva a transformar el mundo de las mudanzas.</p>
+          <h2>Nuestra Historia</h2>
+          <p>Cómo nació greenhauL y hacia dónde vamos</p>
         </div>
-        <div class="features-grid">
-          <div class="feature-item">
-            <h3>Sustentabilidad</h3>
-            <p>Estamos comprometidos con el medio ambiente. Nuestras cajas son reutilizables, resistentes y reducen significativamente los residuos de cartón.</p>
+        <div class="timeline-container">
+          <div class="timeline-line"></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2022 - La Idea</h3><p>Después de una mudanza frustrante llena de cajas rotas y desperdicio, decidimos que tenía que haber una mejor manera de hacer las cosas.</p></div></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2023 - Primeras Cajas</h3><p>Compramos nuestro primer lote de 500 cajas reutilizables y comenzamos a ofrecer el servicio a amigos y familiares en la CDMX.</p></div></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2024 - Crecimiento</h3><p>Expandimos nuestro inventario a 2,000 cajas y comenzamos a atender toda el área metropolitana con entregas programadas.</p></div></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2024 - Plataforma Digital</h3><p>Lanzamos nuestra página web para facilitar las reservas en línea y mejorar la experiencia del cliente.</p></div></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2025 - Presente</h3><p>Hoy contamos con más de 5,000 cajas en circulación y hemos ayudado a más de 2,500 familias con sus mudanzas.</p></div></div>
+          <div class="timeline-item"><div class="timeline-dot"></div><div class="timeline-content"><h3>2025 - Futuro</h3><p>Planeamos expandirnos a Guadalajara y Monterrey, además de agregar servicios complementarios como embalaje profesional.</p></div></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Beneficios -->
+    <section class="section" id="como-funciona">
+      <div class="container">
+        <div class="section-title">
+          <h2>¿Por Qué Elegir <span style="color: var(--accent-green);">greenhauL</span>?</h2>
+          <p>Las ventajas de nuestro servicio de renta de cajas</p>
+        </div>
+        <div class="innovation-grid">
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-recycle"></i></div><h3>100% Reutilizables</h3><p>Eliminan el desperdicio de cartón.</p></div>
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-shield-alt"></i></div><h3>Súper Resistentes</h3><p>Impermeables y con capacidad de hasta 30kg.</p></div>
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-truck"></i></div><h3>Entrega y Recolección</h3><p>En tu domicilio, sin complicaciones.</p></div>
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-dollar-sign"></i></div><h3>Más Económico</h3><p>Ahorras dinero comparado con comprar cajas.</p></div>
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-clock"></i></div><h3>Ahorra Tiempo</h3><p>Llegan listas para usar, sin necesidad de armarlas.</p></div>
+          <div class="innovation-card"><div class="innovation-icon"><i class="fas fa-leaf"></i></div><h3>Cuida el Planeta</h3><p>Cada mudanza evita 15-20 cajas de cartón.</p></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Nuestro Equipo -->
+    <section class="team-enhanced">
+      <div class="container">
+        <div class="section-title">
+          <h2>Conoce a Nuestro Equipo</h2>
+          <p>Las personas que hacen posible greenhauL</p>
+        </div>
+        <div class="team-grid">
+          <div class="team-card-enhanced">
+            <div class="team-photo-enhanced"><img src="https://i.pravatar.cc/150?img=11" alt="Juan Pérez" /></div>
+            <h4>Juan Pérez</h4><p style="color: var(--accent-green); font-weight: 600;">Fundador & CEO</p><p style="font-size: 0.9rem;">Ingeniero Industrial. Fundó greenhauL tras su propia experiencia con mudanzas.</p>
           </div>
-          <div class="feature-item">
-            <h3>Logística Inteligente</h3>
-            <p>Ofrecemos soluciones modernas que hacen que tu mudanza sea más eficiente, segura y puntual. Nuestro sistema te guía paso a paso.</p>
+          <div class="team-card-enhanced">
+            <div class="team-photo-enhanced"><img src="https://i.pravatar.cc/150?img=5" alt="Ana Gómez" /></div>
+            <h4>Ana Gómez</h4><p style="color: var(--accent-green); font-weight: 600;">Directora de Operaciones</p><p style="font-size: 0.9rem;">Especialista en logística. Coordina entregas y recolecciones.</p>
           </div>
-          <div class="feature-item">
-            <h3>Compromiso Social</h3>
-            <p>Trabajamos con comunidades locales y promovemos empleos verdes como parte de nuestra filosofía de responsabilidad social.</p>
+          <div class="team-card-enhanced">
+            <div class="team-photo-enhanced"><img src="https://i.pravatar.cc/150?img=8" alt="Carlos Ruiz" /></div>
+            <h4>Carlos Ruiz</h4><p style="color: var(--accent-green); font-weight: 600;">Responsable de Flota</p><p style="font-size: 0.9rem;">Encargado del mantenimiento y limpieza de nuestras cajas.</p>
+          </div>
+          <div class="team-card-enhanced">
+            <div class="team-photo-enhanced"><img src="https://i.pravatar.cc/150?img=32" alt="Sofía López" /></div>
+            <h4>Sofía López</h4><p style="color: var(--accent-green); font-weight: 600;">Atención al Cliente</p><p style="font-size: 0.9rem;">Siempre disponible para resolver dudas y coordinar entregas.</p>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <script src="assets/js/main.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const timelineItems = document.querySelectorAll('.timeline-item');
+      const timelineObserver = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('visible');
+          }
+        });
+      }, { threshold: 0.3 });
+      timelineItems.forEach(item => timelineObserver.observe(item));
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-content">
-      <div class="footer-info">
-        <h3>greenhauL</h3>
-        <p>Mudanzas sostenibles, sin complicaciones.</p>
-        <p><i class="fas fa-phone-alt"></i> +52 55 1234 5678</p>
-        <p><i class="fas fa-envelope"></i> info@greenhauL.com</p>
-        <p><i class="fas fa-map-marker-alt"></i> Ciudad de México</p>
-      </div>
-      <div class="footer-links">
-        <h3>Enlaces Rápidos</h3>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-        </ul>
-      </div>
-      <div class="footer-social-links">
-        <h3>Síguenos</h3>
-        <div class="social-icons-wrapper">
-          <a href="#" class="social-icon" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social-icon" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social-icon" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; <span id="current-year">2025</span> greenhauL. Todos los derechos reservados.
-    </div>
-  </footer>
+      const statNumbers = document.querySelectorAll('.stat-number');
+      const statsObserver = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            const target = parseInt(entry.target.style.getPropertyValue('--target'));
+            animateCounter(entry.target, target);
+          }
+        });
+      }, { threshold: 0.5 });
+      statNumbers.forEach(stat => statsObserver.observe(stat));
 
-  <!-- MODAL DEL CARRITO -->
-  <div class="cart-modal-overlay" id="cartModalOverlay">
-    <div class="cart-modal">
-      <div class="cart-modal-header">
-        <h2>Tu Carrito</h2>
-        <button class="close-modal-btn" id="closeCartModalBtn">&times;</button>
-      </div>
-      <div class="cart-modal-body" id="cartItemsContainer"></div>
-      <div class="cart-modal-footer">
-        <div class="cart-summary">
-          <p>Subtotal: <span id="cartSubtotal">$0.00</span></p>
-          <p>Impuestos (16%): <span id="cartTaxes">$0.00</span></p>
-          <h3>Total: <span id="cartTotal">$0.00</span></h3>
-        </div>
-        <div class="cart-footer-buttons">
-          <button class="btn btn-secondary empty-cart-btn" id="emptyCartBtn">Vaciar Carrito</button>
-          <a href="confirmacion-entrega-recoleccion.html" class="btn btn-primary proceed-to-checkout-btn" id="proceedToCheckoutBtn">Finalizar Compra</a>
-        </div>
-      </div>
-    </div>
-  </div>
+      function animateCounter(element, target) {
+        let current = 0;
+        const increment = target / 100;
+        const timer = setInterval(() => {
+          current += increment;
+          if (current >= target) {
+            current = target;
+            clearInterval(timer);
+          }
+          element.textContent = Math.floor(current) + (element.textContent.includes('%') ? '%' : '');
+        }, 20);
+      }
 
-  <!-- NOTIFICACIÓN -->
-  <div class="cart-notification" id="cartNotification">
-    <div class="notification-content">
-      <div class="notification-icon-wrapper"><span class="notification-icon"></span></div>
-      <p id="notificationText"></p>
-    </div>
-  </div>
+      window.addEventListener('scroll', () => {
+        const scrolled = window.pageYOffset;
+        const parallaxElements = document.querySelectorAll('.floating-element');
+        parallaxElements.forEach((element, index) => {
+          const speed = 0.5 + (index * 0.1);
+          element.style.transform = `translateY(${scrolled * speed}px) rotate(${scrolled * 0.1}deg)`;
+        });
+      });
 
-  <!-- JS PRINCIPAL -->
-  <script type="module" src="assets/js/main.js"></script>
+      document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+        anchor.addEventListener('click', function (e) {
+          e.preventDefault();
+          const target = document.querySelector(this.getAttribute('href'));
+          if (target) {
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        });
+      });
+    });
+  </script>
 </body>
 </html>
